# macko_spmv

./: README.md  TECHNICAL_README.md  pyproject.toml  setup.py
c_benchmarking/: benchmark.cu  run_tests.sh  run_tests_int8.sh  utils.cuh
c_benchmarking/results_8bit/NVIDIA_GeForce_RTX_2080_SUPER/: results.txt
media/: README.md
python_scripts/: effective_density_visualization.ipynb  gen_mtx_matrices.ipynb  parse_dasp_results.ipynb  result_parsing.ipynb  util_run_pruned_llm.py
python_scripts/dasp_results/: NVIDIA_GeForce_RTX_2080_SUPER.txt
src/macko_spmv/: __init__.py
src/macko_spmv/cuda/: cpu_compressor.cuh  cpu_compressor_torch_launcher.cuh  kernels.cuh  kernels_torch_launchers.cuh  torch_bindings.cu
