[project]
name = "macko-spmv"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vlejd", email = "vladimir.v.macko@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch",
]

[build-system]
requires = ["setuptools", "wheel", "torch", "ninja", "numpy"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "transformers==4.55",
    "fire>=0.7.1",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

test = [
    "pytest>=8.4.2",
]

[tool.setuptools.package-data]
"*" = ["cuda/*"]

[tool.uv.extra-build-dependencies]
git = ["jinja2"]
