[project]
name = "macko-spmv"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vlejd", email = "vladimir.v.macko@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch",
]

[build-system]
requires = ["setuptools", "wheel", "torch", "ninja", "numpy"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "transformers==4.55",
    "fire",
    "ipykernel",
    "jinja2",
    "matplotlib",
    "pandas",
    "scipy",
    "seaborn",
    "shapely",
    "tabulate",
    "tqdm",
]

test = [
    "pytest>=8.4.2",
]

[tool.setuptools.package-data]
"*" = ["cuda/*"]

[tool.uv.extra-build-dependencies]
git = ["jinja2"]
